updated new link

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     integration, e-commerce solutions, responsive design, security enhancement, and ongoing maintenance
                     and support. Our expertise ensures tailored, user-friendly websites optimized for performance and
                     scalability. </p>
-                <a href="https://www.geeksforgeeks.org/web-development/" class="btn">Read More</a>
+                <a href="https://github.com/User-Krishna/Development_Detail" class="btn">Read More</a>
             </div>
             <div class="services-box">
                 <i class='bx bxs-paint'></i>
@@ -146,8 +146,8 @@
                 <p>Our software development services offer tailored solutions to meet your unique needs, including
                     custom software applications, mobile app development With expertise in cutting-edge technologies and
                     agile methodologies, we deliver scalable software solutions that drive innovation business
-                    processes. </p>
-                <a href="https://www.coursera.org/articles/how-to-become-a-software-developer" class="btn">Read More</a>
+                    process. </p>
+                <a href="https://github.com/User-Krishna/Software_Developer_Details" class="btn">Read More</a>
             </div>
         </div>
     </section>
