--- a/index.html
+++ b/index.html
@@ -158,12 +158,11 @@
         <h2 class="heading">Latest <span>Project</span></h2>
         <div class="portfolio-container">
             <div class="portfolio-box">
-                <img src="images/tic.png" width="520" height="270">
+                <img src="images/face.png" width="520" height="270">
                 <div class="portfolio-layer">
-                    <h4>Tic-Tac-Toe</h4>
-                    <p>Tic-Tac-Toe is a simple and fun game for 2 players, X and O. It is played on a 3x3 grid. Each
-                        player's goal is to make 3 in a row. </p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <h4>Face Recognition</h4>
+                    <p>The Face Recognition React project enables users to detect and recognize faces using a seamless and responsive UI. </p>
+                    <a href="https://github.com/User-Krishna/Face-Recognition-React"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
@@ -183,39 +182,37 @@
                     <h4>Tourism Website</h4>
                     <p>For my tourism website project, I crafted an immersive user experience with seamless navigation
                         and integration of features like destination guides and booking systems. </p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <a href="https://github.com/User-Krishna/tourism"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
             <div class="portfolio-box">
-                <img src="images/sms.png" width="520" height="270">
+                <img src="images/document.png" width="520" height="270">
                 <div class="portfolio-layer">
-                    <h4>Student Management System</h4>
-                    <p>In developing a student management system using Java NetBeans, I engineered a comprehensive
-                        platform integrating features like student profiles, course enrollment, and grade tracking. </p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <h4>Document Summarization</h4>
+                    <p>Document summarization is the process of condensing a text document into a shorter version while retaining its key information and meaning. </p>
+                    <a href=""><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
             <div class="portfolio-box">
-                <img src="images/placement.png" width="520" height="270">
+                <img src="images/placement-home.webp" width="520" height="270">
                 <div class="portfolio-layer">
                     <h4>Placement Management System</h4>
                     <p>In constructing a placement management system using Java NetBeans, I architected a robust
                         platform facilitating tasks such as job postings and interview scheduling.
                     </p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <a href="https://github.com/User-Krishna/Placement_Management_System"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
             <div class="portfolio-box">
-                <img src="images/result.jpg" width="520" height="270">
+                <img src="images/facilty.png" width="520" height="270">
                 <div class="portfolio-layer">
-                    <h4>School Management System</h4>
-                    <p>In creating a school management system using Java NetBeans, I designed a comprehensive platform
-                        incorporating features such as student enrollment, attendance tracking, and grade management.
+                    <h4>Faculty Allocation System</h4>
+                    <p>Faculty Allocation System aims to streamline the allocation of invigilation duties in educational institutions. 
                     </p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <a href="https://github.com/User-Krishna/Optimized-Exam-Duty-Allocation-With-Smart-Invigilation-Scheduler"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
         </div>
