--- a/index.html
+++ b/index.html
@@ -240,7 +240,8 @@
                 </div>
 
                 <div class="contact-right">
-                    <form method="post" action="" name="contact-form">
+                    <form method="post" action="https://script.google.com/macros/s/AKfycbxBYVRoKmkLH79ICCAnjzaQcDG7Glv5Hx_EIrvuSmYui6gtb5ar-l0C33bLME8QMppB/exec" name="contact-form">
+
                         <input type="text" name="Name" placeholder="Your Name" required>
                         <input type="text" name="Number" placeholder="Your Number" required>
                         <input type="email" name="email" placeholder="Your Email" required>
