--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <ul>
                             <li><span>2023-Current</span><br>UI/UX Design at GNIT</li>
                             <li><span>2020-2022</span><br>Team Leader In Brumous at GNI</li>
-                            <li><span>2018-2019</span><br>Web Developer at Softech</li>
+                            <li><span>2018-2019</span><br>Web Developer at Edunet Foundation</li>
                         </ul>
                     </div>
 
