--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     <h4>E-Commerce Website</h4>
                     <p>In my e-commerce website project, I designed and developed a user-friendly platform with secure
                         payment processing, optimizing performance and integrating key features. </p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <a href="https://github.com/User-Krishna/Sports_Ecommerce"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
@@ -189,7 +189,7 @@
             <div class="portfolio-box">
                 <img src="images/document.png" width="520" height="270">
                 <div class="portfolio-layer">
-                    <h4>Document Summarization</h4>
+                    <h4>Multimedia Summarization</h4>
                     <p>Document summarization is the process of condensing a text document into a shorter version while retaining its key information and meaning. </p>
                     <a href=""><i class='bx bx-link-external'></i></a>
                 </div>
