added updated resume

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <a href="https://t.me/KrishnaDas12"><i class='bx bxl-telegram'></i> </a>
                 <a href="https://www.facebook.com/timibinamaaadhuro.aadhuro/"> <i class='bx bxl-facebook-circle'></i></a>
             </div>
-            <a href="Krishna_Das.pdf" download class="btn">Download CV</a>
+            <a href="Krishna_Resume.pdf" download class="btn">Download CV</a>
             <!---time set-->
             <div class="containers">
                 <div class="clock">
@@ -236,7 +236,7 @@
                         <a href="https://t.me/KrishnaDas12"><i class='bx bxl-telegram'></i> </a>
                         <a href="https://www.facebook.com/timibinamaaadhuro.aadhuro/"> <i class='bx bxl-facebook-circle'></i></a>
                     </div>
-                    <a href="Krishna_Das.pdf" download class="btn btn2">Download CV</a>
+                    <a href="Krishna_Resume.pdf" download class="btn btn2">Download CV</a>
                 </div>
 
                 <div class="contact-right">
